language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_aliased_type.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub type Wibble { Constructor }\n\npub fn main(w: Wibble) -> Wibble { todo }\n"
---
----- BEFORE RENAME
-- mod.gleam

import app.{type Wibble as Wobble}

fn wibble() -> Wobble { todo }


-- app.gleam

pub type Wibble { Constructor }
         ↑▔▔▔▔▔                

pub fn main(w: Wibble) -> Wibble { todo }


----- AFTER RENAME
-- mod.gleam

import app.{type SomeType as Wobble}

fn wibble() -> Wobble { todo }


-- app.gleam

pub type SomeType { Constructor }

pub fn main(w: SomeType) -> SomeType { todo }
