language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_aliased_value.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub type Wibble { Wibble }\n\npub fn main() {\n  Wibble\n}\n"
---
----- BEFORE RENAME
-- mod.gleam

import app.{Wibble as Wobble}

fn wobble() {
  Wobble
}


-- app.gleam

pub type Wibble { Wibble }
                  ↑▔▔▔▔▔  

pub fn main() {
  Wibble
}


----- AFTER RENAME
-- mod.gleam

import app.{Wubble as Wobble}

fn wobble() {
  Wobble
}


-- app.gleam

pub type Wibble { Wubble }

pub fn main() {
  Wubble
}
