language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_alternative_pattern_alias_and_variable_4.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub fn main(x) {\n  case x {\n    [_, ..list] | [] as list -> list\n    _ -> []\n  }\n}\n"
---
----- BEFORE RENAME
-- app.gleam

pub fn main(x) {
  case x {
    [_, ..list] | [] as list -> list
                        ↑▔▔▔        
    _ -> []
  }
}


----- AFTER RENAME
-- app.gleam

pub fn main(x) {
  case x {
    [_, ..new_name] | [] as new_name -> new_name
    _ -> []
  }
}
