language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_alternative_pattern_from_usage.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub fn main(x) {\n  case x {\n    #(wibble, [wobble]) | #(wobble, [wibble, _]) | #(_, [wibble, wobble, ..]) ->\n      wibble + wobble\n    _ -> 0\n  }\n}\n"
---
----- BEFORE RENAME
-- app.gleam

pub fn main(x) {
  case x {
    #(wibble, [wobble]) | #(wobble, [wibble, _]) | #(_, [wibble, wobble, ..]) ->
      wibble + wobble
      ↑▔▔▔▔▔         
    _ -> 0
  }
}


----- AFTER RENAME
-- app.gleam

pub fn main(x) {
  case x {
    #(new_name, [wobble]) | #(wobble, [new_name, _]) | #(_, [new_name, wobble, ..]) ->
      new_name + wobble
    _ -> 0
  }
}
